--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "invoice-app",
   "private": true,
+  "homepage": "https://jowoojun.github.io/invoice-app/",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next export",
+    "deploy": "gh-pages -d build",
+    "deploy-gh-pages": "rm -rf node_modules/.cache && next build && next export && touch out/.nojekyll && git add -f out/ && git checkout -b temp-for-deploy-gh-pages && git commit -m \"Deploy Next.js to gh-pages\" && git subtree split --prefix out -b gh-pages && git push -f origin gh-pages:gh-pages && git branch -D gh-pages && git checkout main && git branch -D temp-for-deploy-gh-pages"
   },
   "dependencies": {
     "axios": "^0.24.0",
@@ -27,6 +31,7 @@
     "@types/styled-components": "^5.1.17",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
+    "gh-pages": "^3.2.3",
     "typescript": "4.5.3"
   }
 }
